--- a/index.html
+++ b/index.html
@@ -1,17 +1,214 @@
 <!doctype html>
-<html>
+<html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="https://cdn.tailwindcss.com"></script>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <title>HackersBoom0x00</title>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+        }
+    </style>
+
+    <link href="assets/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
+
+    <link rel="stylesheet" href="assets/css/style.css">
+    <script src="https://kit.fontawesome.com/yourcode.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
+    <style>
+        .main-card {
+            display: flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            /* border: 1px solid white; */
+            border-radius: 15px;
+            box-shadow: 1px 1px 10px black;
+        }
+
+        @media screen and (max-width: 1010px) {
+            .main-card {
+                flex-direction: column;
+            }
+        }
+
+        .main-card-img img {
+            padding: 10px;
+            width: 18em;
+            border-radius: 50%;
+        }
+
+        #skills h1 {
+            text-align: center;
+        }
+
+        .project-card {
+            background-color: transparent;
+        }
+    </style>
+    <script>
+
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
+        crossorigin="anonymous"></script>
+
 </head>
 
-<body>
-    <h1 class="text-3xl font-bold underline">
-        Hello world!
-    </h1>
-    <h1></h1>
+<body class="bg-dark">
+    <header>
+        <nav class="navbar navbar-expand-lg bg-cyber">
+            <div class="container-fluid">
+                <a class="navbar-brand" href="#">Navbar</a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="termsofservices.html">Terms of Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="#">Privacy & Policies</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </header>
+
+    <main>
+        <div class="container">
+            <div class="main-card bg-transparent my-5">
+                <div class="main-card-img">
+                    <img src="assets/images/images (1) (3).jpeg" alt="">
+                </div>
+                <div class="card-info">
+                    <div class="card-title">
+                        <h5 class="fg-cyber">HackersBoom0x00</h5>
+                    </div>
+                    <div class="card-body">
+                        <i>
+                            A person who like programming and play with others code. A person whos life is all around
+                            computer science. Who don't know anything other then computer science.
+                        </i>
+                    </div>
+                </div>
+            </div>
+            <section id="skills">
+                <hr>
+                <h1>
+                    skills
+                </h1>
+                <hr class="py-4">
+                <span class="skill-card">
+                    <i class="fa fa-database fg-cyber px-2"></i> DataBase
+                </span>
+
+                <span class="skill-card">
+                    <i class="fa fa-code fg-cyber px-2"></i> Programming Languages
+                </span>
+                <span class="skill-card">
+                    <i class="fa fa-spider-web fg-cyber px-2"></i>Web Technologies
+                </span>
+                <span class="skill-card">
+                    <i class="fa-solid fa-hat-cowboy fg-cyber px-2"></i>Cyber Security
+                </span>
+            </section>
+            <section id="projects" class="py-5">
+                <div>
+                    <h1 style="text-align: center;">Projects I've Built...</h1>
+                    <div class="row">
+                        <div class="card project-card col-md-6">
+                            <img class="card-img-top" src="assets/images/IMG_20230114_130242.jpg" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card project-card col-md-6">
+                            <img class="card-img-top" src="assets/images/pornlang.png" alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card project-card col-md-6">
+                            <img class="card-img-top" src="assets/images/PicsArt_02-07-04.15.08.png"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                        <div class="card project-card col-md-6">
+                            <img class="card-img-top" src="assets/images/PicsArt_02-07-04.28.58.png"
+                                alt="Card image cap">
+                            <div class="card-body">
+                                <h5 class="card-title">Card title</h5>
+                                <p class="card-text">Some quick example text to build on the card title and make up the
+                                    bulk of the card's content.</p>
+                                <a href="#" class="btn btn-primary">Go somewhere</a>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                </div>
+            </section>
+            <section class="frameworks py-5">
+                <h1 style="text-align: center;">Frameworks and Libraries</h1>
+                <hr>
+                <div class="row" style="width: 100%; overflow: hidden;">
+                    <div class="col-md-6"><img src="assets/images/bootstrap-1393502655"
+                            style="width: 100%; height: 100%;" alt=""></div>
+                    <div class="col-md-6"><img src="assets/images/django.jpg" alt="" style="width: 100%; height: 100%;">
+                    </div>
+                    <div class="col-md-6"><img src="assets/images/jQuery Interview Questions and Answers.png" alt=""
+                            style="width: 100%; height: 100%;">
+                    </div>
+                    <div class="col-md-6"><img src="assets/images/react.png" alt="" style="width: 100%; height: 100%;">
+                    </div>
+                </div>
+            </section>
+
+        </div>
+    </main>
+    <div class="fun my-5" style="font-size: 2em; text-align: center;">
+        hackersboom0X00
+    </div>
+    <footer>
+        <div class="footer-head">
+            HB0x00 &copy; 2023, 2024.
+            <a href="termsofservices.html" class="fg-cyber">Terms Of Services</a>
+            <a href="#" class="fg-cyber">Privacy & Policies</a>
+        </div>
+        <div id="social-media-links">
+            <div>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-github"></i>
+                <i class="fa-brands fa-twitter"></i>
+                <i class="fa-regular fa-envelope"></i>
+            </div>
+        </div>
+    </footer>
+
+
 </body>
 
 </html>
