--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
     <link rel="stylesheet" href="https://site-assets.fontawesome.com/releases/v6.2.1/css/all.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.3/jquery.min.js"></script>
     <style>
+        body {
+            background-color: #272530;
+        }
+
         .main-card {
             display: flex;
             flex-direction: row;
@@ -60,11 +64,11 @@
 
 </head>
 
-<body class="bg-dark">
-    <header>
-        <nav class="navbar navbar-expand-lg bg-cyber">
+<body class="">
+    <header class="bg-primary-c">
+        <nav class="navbar navbar-expand-lg fg-light navbar-dark">
             <div class="container-fluid">
-                <a class="navbar-brand" href="#">Navbar</a>
+                <a class="navbar-brand" href="#">HackersBoom0x00</a>
                 <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
                     aria-expanded="false" aria-label="Toggle navigation">
@@ -87,15 +91,15 @@
         </nav>
     </header>
 
-    <main>
+    <main style="">
         <div class="container">
-            <div class="main-card bg-transparent my-5">
+            <div class="main-card bg-primary-c" style="margin-top: 1.6em;">
                 <div class="main-card-img">
                     <img src="assets/images/images (1) (3).jpeg" alt="">
                 </div>
                 <div class="card-info">
                     <div class="card-title">
-                        <h5 class="fg-cyber">HackersBoom0x00</h5>
+                        <h5 class="" style="color: beige; font-weight: 900;">HackersBoom0x00</h5>
                     </div>
                     <div class="card-body">
                         <i>
@@ -105,91 +109,87 @@
                     </div>
                 </div>
             </div>
-            <section id="skills">
-                <hr>
-                <h1>
+            <section id="skills" class="py-5">
+                <hr style="color: black;">
+                <h1 style="color: #816fbc;">
                     skills
                 </h1>
-                <hr class="py-4">
-                <span class="skill-card">
+                <hr class="py-4" style="color: black;">
+                <span class="skill-card bg-primary-c">
                     <i class="fa fa-database fg-cyber px-2"></i> DataBase
                 </span>
 
-                <span class="skill-card">
+                <span class="skill-card bg-primary-c">
                     <i class="fa fa-code fg-cyber px-2"></i> Programming Languages
                 </span>
-                <span class="skill-card">
+                <span class="skill-card bg-primary-c">
                     <i class="fa fa-spider-web fg-cyber px-2"></i>Web Technologies
                 </span>
-                <span class="skill-card">
+                <span class="skill-card bg-primary-c">
                     <i class="fa-solid fa-hat-cowboy fg-cyber px-2"></i>Cyber Security
                 </span>
             </section>
-            <section id="projects" class="py-5">
-                <div>
-                    <h1 style="text-align: center;">Projects I've Built...</h1>
-                    <div class="row">
-                        <div class="card project-card col-md-6">
-                            <img class="card-img-top" src="assets/images/IMG_20230114_130242.jpg" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                        <div class="card project-card col-md-6">
-                            <img class="card-img-top" src="assets/images/pornlang.png" alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                        <div class="card project-card col-md-6">
-                            <img class="card-img-top" src="assets/images/PicsArt_02-07-04.15.08.png"
-                                alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                        <div class="card project-card col-md-6">
-                            <img class="card-img-top" src="assets/images/PicsArt_02-07-04.28.58.png"
-                                alt="Card image cap">
-                            <div class="card-body">
-                                <h5 class="card-title">Card title</h5>
-                                <p class="card-text">Some quick example text to build on the card title and make up the
-                                    bulk of the card's content.</p>
-                                <a href="#" class="btn btn-primary">Go somewhere</a>
-                            </div>
-                        </div>
-                    </div>
-                    <hr>
-                </div>
-            </section>
-            <section class="frameworks py-5">
-                <h1 style="text-align: center;">Frameworks and Libraries</h1>
-                <hr>
-                <div class="row" style="width: 100%; overflow: hidden;">
-                    <div class="col-md-6"><img src="assets/images/bootstrap-1393502655"
-                            style="width: 100%; height: 100%;" alt=""></div>
-                    <div class="col-md-6"><img src="assets/images/django.jpg" alt="" style="width: 100%; height: 100%;">
-                    </div>
-                    <div class="col-md-6"><img src="assets/images/jQuery Interview Questions and Answers.png" alt=""
-                            style="width: 100%; height: 100%;">
-                    </div>
-                    <div class="col-md-6"><img src="assets/images/react.png" alt="" style="width: 100%; height: 100%;">
-                    </div>
-                </div>
-            </section>
-
+            <hr class="py-2" style="color: black;">
         </div>
+        <h1 style="text-align: center; color: #816fbc;">Projects I've Built...</h1>
+        <div class="bg-primary-c container project-container" style="border-radius: 30px; ">
+            <div class="container">
+                <section id="projects" class="py-5">
+                    <div>
+                        <div class="row">
+                            <div class="card project-card col-md-6">
+                                <img class="card-img-top" src="assets/images/IMG_20230114_130242.jpg"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Machine Learning Colorizer</h5>
+                                </div>
+                            </div>
+                            <div class="card project-card col-md-6">
+                                <img class="card-img-top" src="assets/images/pornlang.png" alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">P*rnLang</h5>
+                                </div>
+                            </div>
+                            <div class="card project-card col-md-6">
+                                <img class="card-img-top" src="assets/images/PicsArt_02-07-04.15.08.png"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">animizer</h5>
+                                </div>
+                            </div>
+                            <div class="card project-card col-md-6">
+                                <img class="card-img-top" src="assets/images/PicsArt_02-07-04.28.58.png"
+                                    alt="Card image cap">
+                                <div class="card-body">
+                                    <h5 class="card-title">Telegram Bots</h5>
+                                </div>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+                </section>
+                <section class="frameworks py-5">
+                    <h1 style="text-align: center;">Frameworks and Libraries</h1>
+                    <hr>
+                    <div class="row" style="width: 100%; overflow: hidden;">
+                        <div class="col-md-6"><img src="assets/images/bootstrap-1393502655"
+                                style="width: 100%; height: 100%;" alt=""></div>
+                        <div class="col-md-6"><img src="assets/images/django.jpg" alt=""
+                                style="width: 100%; height: 100%;">
+                        </div>
+                        <div class="col-md-6"><img src="assets/images/jQuery Interview Questions and Answers.png" alt=""
+                                style="width: 100%; height: 100%;">
+                        </div>
+                        <div class="col-md-6"><img src="assets/images/react.png" alt=""
+                                style="width: 100%; height: 100%;">
+                        </div>
+                    </div>
+                </section>
+            </div>
+        </div>
+
     </main>
-    <div class="fun my-5" style="font-size: 2em; text-align: center;">
+    <div class="fun my-5" style="font-size: 2em; text-align: center; color: #816fbc;">
         hackersboom0X00
     </div>
     <footer>
